--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,13 @@ warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
 disallow_incomplete_defs = true
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = [
+    "tests.*",
+]
+disallow_untyped_defs = false
 
 [tool.black]
 line-length = 88
